--- a/Adventure.iatemplate/Contents/Resources/style.css
+++ b/Adventure.iatemplate/Contents/Resources/style.css
@@ -15,12 +15,16 @@
 
   h1 {
     font-family: Luminari;
-    font-size: 3.5em;
+    font-size: 2.5em;
     font-weight: 400;
     line-height: 1.1em;
     margin: 0 auto 1.5em;
     max-width: fit-content;
     text-align: center;
+  }
+
+  h1.title {
+    font-size: 4em;
   }
 
   h2 {
